branch movement issue 1 : overflow가 작동하지 않는 문제 해결

--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,12 @@
 *{margin:0; padding:0;}
 
+#container{
+  position: relative;
+  overflow: hidden;
+}
+
+
+
 #root1{
   width:100vw;
   height:100vh;
